# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ARKUI_UI_LITE_PATH = "//foundation/arkui/ui_lite"

arkui_ui_lite_include_dirs = [
  "$ARKUI_UI_LITE_PATH/interfaces/kits",
  "$ARKUI_UI_LITE_PATH/interfaces/innerkits",
]

arkui_ui_lite_sources = [
  "$ARKUI_UI_LITE_PATH/frameworks/animator/animator.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/animator/animator_manager.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/animator/easing_equation.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/animator/interpolation.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/common/graphic_startup.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/common/image.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/common/image_decode_ability.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/common/input_device_manager.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/common/screen.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/common/spannable_string.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/common/task.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/common/text.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/common/typed_text.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/root_view.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/text_adapter.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_abstract_clock.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_abstract_progress.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_abstract_scroll.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_abstract_scroll_bar.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_analog_clock.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_arc_label.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_arc_scroll_bar.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_axis.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_box_progress.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_box_scroll_bar.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_button.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_canvas.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_chart.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_checkbox.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_circle_progress.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_dialog.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_digital_clock.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_edit_text.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_image_animator.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_image_view.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_label.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_label_button.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_list.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_picker.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_qrcode.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_radio_button.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_repeat_button.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_scroll_view.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_slider.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_surface_view.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_swipe_view.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_texture_mapper.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_time_picker.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_toggle_button.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_tree_manager.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_view.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/components/ui_view_group.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/core/input_method_manager.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/core/render_manager.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/core/task_manager.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/default_resource/check_box_res.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/dfx/event_injector.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/dfx/key_event_injector.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/dfx/performance_task.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/dfx/point_event_injector.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/dfx/ui_dump_dom_tree.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/dfx/ui_view_bounds.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/dock/focus_manager.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/dock/input_device.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/dock/key_input_device.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/dock/ohos/ohos_input_device.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/dock/pointer_input_device.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/dock/rotate_input_device.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/dock/vibrator_manager.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/dock/virtual_input_device.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/draw/clip_utils.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/draw/draw_arc.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/draw/draw_canvas.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/draw/draw_curve.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/draw/draw_image.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/draw/draw_label.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/draw/draw_line.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/draw/draw_rect.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/draw/draw_triangle.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/draw/draw_utils.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/engines/gfx/gfx_engine_manager.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/engines/gfx/soft_engine.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/events/event.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/base_font.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/font_ram_allocator.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/glyphs_cache.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/glyphs_file.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/glyphs_manager.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/ui_font.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/ui_font_adaptor.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/ui_font_allocator.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/ui_font_bitmap.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/ui_font_builder.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/ui_font_cache.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/ui_font_cache_manager.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/ui_font_vector.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/ui_line_break.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/font/ui_multi_font_manager.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/imgdecode/cache_manager.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/imgdecode/file_img_decoder.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/imgdecode/image_load.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/layout/flex_layout.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/layout/grid_layout.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/layout/list_layout.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/render/render_base.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/render/render_pixfmt_rgba_blend.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/render/render_scanline.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/themes/theme.cpp",
  "$ARKUI_UI_LITE_PATH/frameworks/themes/theme_manager.cpp",
]
