# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/ui/ui.gni")
import("//foundation/graphic/utils/utils.gni")
ohos_static_library("libupdater_layout") {
  defines = [
    "__LITEOS_M__",
    "ENABLE_BITMAP_FONT = 0",
    "ENABLE_ICU = 0",
    "ENABLE_JPEG_AND_PNG = 1",
    "ENABLE_MULTI_FONT = 0",
    "ENABLE_SHAPING = 0",
    "ENABLE_STATIC_FONT = 0",
    "ENABLE_VECTOR_FONT = 1",
  ]

  sources = graphic_ui_sources + graphic_utils_sources
  sources -= [
    "$GRAPHIC_UI_PATH/frameworks/components/ui_abstract_clock.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_abstract_scroll.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_abstract_scroll_bar.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_analog_clock.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_arc_label.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_arc_scroll_bar.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_axis.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_box_scroll_bar.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_canvas.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_chart.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_checkbox.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_circle_progress.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_dialog.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_digital_clock.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_list.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_picker.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_qrcode.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_radio_button.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_repeat_button.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_scroll_view.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_slider.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_surface_view.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_swipe_view.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_texture_mapper.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_time_picker.cpp",
    "$GRAPHIC_UI_PATH/frameworks/components/ui_toggle_button.cpp",
    "$GRAPHIC_UI_PATH/frameworks/dfx/event_injector.cpp",
    "$GRAPHIC_UI_PATH/frameworks/dfx/key_event_injector.cpp",
    "$GRAPHIC_UI_PATH/frameworks/dfx/performance_task.cpp",
    "$GRAPHIC_UI_PATH/frameworks/dfx/point_event_injector.cpp",
    "$GRAPHIC_UI_PATH/frameworks/dfx/ui_dump_dom_tree.cpp",
    "$GRAPHIC_UI_PATH/frameworks/dock/ohos/ohos_input_device.cpp",
    "$GRAPHIC_UI_PATH/frameworks/dock/vibrator_manager.cpp",
    "$GRAPHIC_UI_PATH/frameworks/dock/virtual_input_device.cpp",
  ]
  include_dirs = graphic_ui_include_dirs + graphic_utils_include_dirs
  include_dirs += [ "//foundation/graphic/ui/frameworks" ]
  deps = [
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/freetype:freetype_static",
    "//third_party/libjpeg-turbo:turbojpeg_static",
    "//third_party/libpng:libpng",
  ]
}
